# ProductDate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.ebextensions/: 02_python.config
.envs/compose/: django  postgres
.envs/local/: django
.github/workflows/: django.yml
ProductDate/: asgi.py  settings.py  urls.py  wsgi.py
ProductDate/company/: apps.py  models.py
ProductDate/company/migrations/: 0001_initial.py
ProductDate/products/: apps.py  models.py
ProductDate/products/migrations/: 0001_initial.py
ProductDate/user/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
ProductDate/user/management/commands/: create_base_superuser.py
ProductDate/user/migrations/: 0001_initial.py  0002_user_company_user_shop.py
