[tool.poetry]
name = "productdate"
version = "0.1.0"
description = ""
authors = ["kuptsovsasha <kuptsovsasha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.4"
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
    (
        \.eggs|
        \.git|
        \.hg|
        \.mypy_cache|
        \.nox|
        \.tox|
        \.venv|
        \.svn|
        _build|
        buck-out|
        build|
        dist|
        settings\.py|
        migrations|
        snapshots
    )/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap= 0
use_parentheses = true
line_length = 88
skip_glob = '*migrations*,*snapshot*'